objects/ASI_CN_NPL_Product_Document__c.object
<CustomObject>
    <description>ASI CN NPL Product Document, for attaching product photo of NPL Request</description>
    <fields>
        <fullName>ASI_CN_NPL_Attach_in_Approval__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Attach in Approval Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Photo</fullName>
                </value>
                <value>
                    <fullName>Packing Photo</fullName>
                </value>
                <value>
                    <fullName>Base Volume Forecast</fullName>
                </value>
                <value>
                    <fullName>NPL Info Before S&amp;OP Meeting</fullName>
                </value>
                <value>
                    <fullName>NPL Info After S&amp;OP Meeting</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>P&amp;L</fullName>
                </value>
                <value>
                    <fullName>Letter of Intent(LOI)</fullName>
                </value>
                <value>
                    <fullName>Launch Background Material</fullName>
                </value>
                <value>
                    <fullName>Value Chain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_FeedItemId__c</fullName>
        <label>FeedItemId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_FileId__c</fullName>
        <label>FileId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_File_Ext__c</fullName>
        <label>File Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_File_Size__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Image_URL__c</fullName>
        <formula>if(
CASE(LOWER( ASI_CN_NPL_File_Ext__c )
, &apos;png&apos;, 1
, &apos;jpg&apos;, 1
, &apos;gif&apos;, 1
, &apos;jpeg&apos;, 1
, &apos;jfif&apos;, 1
, &apos;tiff&apos;, 1
,0) = 1
, &apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB120BY90&amp;versionId=&apos; &amp; ASI_CN_NPL_FileId__c &amp; &apos;&amp;operationContext=CHATTER&apos;
, NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; ASI_CN_NPL_FileId__c, ASI_CN_NPL_File_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Packing_Photo_Count__c</fullName>
        <formula>IF( ISPICKVAL( ASI_CN_NPL_Category__c , &quot;Packing Photo&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packing Photo Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Parent__c</fullName>
        <label>New Product Launch Request</label>
        <referenceTo>ASI_CN_NPL_NPL_Request__c</referenceTo>
        <relationshipName>NPL_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Preview__c</fullName>
        <formula>IF(ISBLANK(ASI_CN_NPL_Image_URL__c), ASI_CN_NPL_File_Name__c, IMAGE(ASI_CN_NPL_Image_URL__c, ASI_CN_NPL_File_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Product_Photo_Count__c</fullName>
        <formula>IF( ISPICKVAL( ASI_CN_NPL_Category__c , &quot;Product Photo&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Photo Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_Download_Url__c</fullName>
        <formula>HYPERLINK(&apos;/sfc/servlet.shepherd/version/download/&apos; + ASI_CN_NPL_FileId__c , &apos;Download&apos;, &apos;_blank&apos;)</formula>
        <label>Download Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_KR_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Product Launch Request</label>
        <referenceTo>ASI_CN_NPL_NPL_Request__c</referenceTo>
        <relationshipLabel>NPD/SKU Attachment</relationshipLabel>
        <relationshipName>NPL_KR_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NPL Product Photo and Packing Photo</label>
    <nameField>
        <displayFormat>NPLA-{YY}-{00000}</displayFormat>
        <label>Attachment No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPL Product Photos and Packing Photos</pluralLabel>
    <recordTypes>
        <fullName>ASI_NPL_CN_Product_Photo</fullName>
        <active>true</active>
        <label>CN NPL Product Photo</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_NPL_KR_Product_Photo</fullName>
        <active>true</active>
        <label>KR NPL Product Photo</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_MFM_KR_CategoryChange</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( ASI_CN_NPL_Parent__r.ASI_CN_NPL_Status__c ) == &apos;Final Approved&apos; &amp;&amp;  ISCHANGED(ASI_CN_NPL_Category__c )</errorConditionFormula>
        <errorDisplayField>ASI_CN_NPL_Category__c</errorDisplayField>
        <errorMessage>You are not allowed to change the category after final approval</errorMessage>
    </validationRules>
</CustomObject>